<?xml version="1.0" encoding="utf-8"?>
<!--
      Student name: Charles Mushi
            Student ID: S1803448
      -->
<LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".ui.Activities.SearchActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.40"
        android:padding="3dp"
        android:orientation="vertical"
        android:background="@color/blackcol">
        <LinearLayout
            android:id="@+id/date_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@color/colorPrimary">
            <TextView
                style="@style/DialogTextStyle"
                android:text="@string/sdate"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>

        <!-- BODY -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:padding="20dp"
            android:background="@drawable/background">
            <TableRow android:padding="10dp">

                <EditText
                    android:id="@+id/startDate"
                    style="@style/DialogTextStyle"
                    android:layout_width="150dp"
                    android:hint="@string/idate"/>
                <EditText
                    android:id="@+id/endDate"
                    style="@style/DialogTextStyle"
                    android:layout_width="150dp"
                    android:hint="@string/edate"/>

            </TableRow>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_search"
                android:id="@+id/searchic"/>

        </TableLayout>

    </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.70"
            android:padding="3dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background">

            <TableRow android:padding="8dp" android:background="@color/colorAccent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nothernly:"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"/>
                <TextView
                    android:id="@+id/northernly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"/>
            </TableRow>

            <TableRow android:padding="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Southernly:"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"/>
                <TextView
                    android:id="@+id/southernly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"/>
            </TableRow>
                <TableRow android:padding="8dp" android:background="@color/colorAccent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Westernly:"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"/>
                    <TextView
                        android:id="@+id/westernly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"/>
                </TableRow>

                <TableRow android:padding="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Easternly:"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"/>
                    <TextView
                        android:id="@+id/easternly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"/>
                </TableRow>
                <TableRow android:padding="8dp" android:background="@color/colorAccent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Greatest Depth:"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"/>
                    <TextView
                        android:id="@+id/greatDepth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"/>
                </TableRow>

                <TableRow android:padding="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Minimum Depth:"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"/>
                    <TextView
                        android:id="@+id/minDepth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"/>
                </TableRow>
                <TableRow android:padding="8dp" android:background="@color/colorAccent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Greatest Magnitude:"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"/>
                    <TextView
                        android:id="@+id/greatMag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"/>
                </TableRow>


            </TableLayout>




        </ScrollView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/studentid"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/studentname"
        android:layout_gravity="center"/>
</LinearLayout>


